@@ -1,3 +1,8 @@
+2008-12-17  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/show.c (show_version) term/x11/trm:  Do not overwrite the 
+	environmental variable GNUPLOT_DRIVER_DIR.
+
 2008-12-14  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/graph3d.c src/graph3d.h:  More work on "set view equal {xy|xyz}'.
